cmd/inspire-gateway/k8s/04-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: inspire-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: inspire-gateway-traefik-app
    k8s.kuboard.cn/workload: inspire-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-inspire-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/inspire/v1/version
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/appgoodscopes
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.hk-cryptomore-production.npool.top
      http: *http_rules
    - host: api.cryptomore.io
      http: *http_rules
    - host: api.epool.tech
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.xhash.ai
      http: *http_rules
    - host: api.tokyo-xhash-production.npool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: inspire-gateway-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: inspire-gateway-traefik-app-user
    k8s.kuboard.cn/workload: inspire-gateway-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-inspire-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          ######
          # Enable to all users
          ######
          - path: /api/inspire/v1/get/achievements
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/commissionhistories
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/app/commissions
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/commission
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/user/commission
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/registrationinvitations
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/user/registrationinvitations
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/update/registrationinvitation
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/app/registrationinvitations
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/invitationcode
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/invitationcodes
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/app/invitationcodes
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/update/commission
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/eventinspire
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/eventinspires
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/update/eventinspire
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/couponpools
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/couponpool
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/update/couponpool
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/my/allocatedcredits
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/my/allocatedcoins
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/my/coinrewards
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/my/rewards
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          #######
          # Only enable to app admin
          #######
          - path: /api/inspire/v1/reconcile
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/user/achievements
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/clone
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/app/couponpools
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/app/allocatedcoupons
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/allocatedcoupons
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/allocatedcoupon
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/scope
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/delete/scope
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/scopes
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/appgoodscope
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/delete/appgoodscope
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/couponcoin
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/delete/couponcoin
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/couponcoins
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/app/couponcoins
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/cashcontrol
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/update/cashcontrol
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/delete/cashcontrol
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/cashcontrols
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/app/cashcontrols
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/appcommissionconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/eventcoininspire
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/eventcoininspire
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/update/eventcoininspire
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/eventcouponinspire
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/eventcouponinspires
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/create/appcommissionconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/update/appcommissionconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/update/appcommissionconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/appcommissionconfigs
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/appcommissionconfigs
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/appconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/create/appconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/update/appconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/update/appconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/appconfigs
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/appconfigs
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/create/appgoodcommissionconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/create/appgoodcommissionconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/update/appgoodcommissionconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/update/appgoodcommissionconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/get/appgoodcommissionconfigs
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/appgoodcommissionconfigs
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/create/coinconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/update/coinconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/coinconfigs
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/delete/coinconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/allocatedcoins
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/allocatedcredits
            backend:
              serviceName: inspire-gateway
              servicePort: 50390              
          - path: /api/inspire/v1/admin/create/taskconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/update/taskconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/delete/taskconfig
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/taskconfigs
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/usercoinrewards
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/userrewards
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/eventinspires
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/create/eventinspire
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/update/eventinspire
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/delete/eventinspire
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/eventcoininspires
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/create/eventcoininspires
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/update/eventcoininspires
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/delete/eventcoininspires
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/get/eventcouponinspires
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/create/eventcouponinspires
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
          - path: /api/inspire/v1/admin/delete/eventcouponinspires
            backend:
              serviceName: inspire-gateway
              servicePort: 50390
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.hk-cryptomore-production.npool.top
      http: *http_rules
    - host: api.cryptomore.io
      http: *http_rules
    - host: api.epool.tech
      http: *http_rules
    - host: api.xhash.ai
      http: *http_rules
    - host: api.tokyo-xhash-production.npool.top
      http: *http_rules
